Terraform/Terraform_Jenkins/jenkins_pipeline/main.tf
provider "aws" {
  region = "us-east-1"
}

resource "aws_instance" "example" {
  ami           = "ami-0b5eea76982371e91"
  instance_type = "t3.micro"
}
