Terraform/Terraform_Jenkins/jenkins_pipeline/natgateway.tf
resource "aws_nat_gateway" "nat-gw" {
  allocation_id = aws_eip.eip.id
  subnet_id = aws_subnet.public[0].id

  tags = {
    Name = "${var.project}-ngw"
  }
}
