Terraform/Terraform_Jenkins/jenkins_pipeline/Security_group.tf
resource "aws_security_group_rule" "sg_ingress_public_443" {
  security_group_id = aws_security_group.public_sg.id

  type = "ingress"
  from_port = 443
  to_port = 443
  protocol = "tcp"
  cidr_blocks = ["0.0.0.0/"]
}

resource "aws_security_group_rule" "sg_ingress_public_80" {
  security_group_id = aws_security_group.public_sg.id

  type = "ingress"
  from_port = 80
  to_port = 80
  protocol = "tcp"
  cidr_blocks = ["0.0.0.0/"]
}

resource "aws_security_group_rule" "sg_egress_public" {
  security_group_id = aws_security_group.public_sg.id

  type = "egress"
  from_port = 0
  to_port = 0
  protocol = "-1"
  cidr_blocks = ["0.0.0.0/"]
}

resource "aws_security_group" "data_plane_sg" {
  name = "${var.project}-Worker-sg"
  vpc_id = aws_vpc.myvpc.id

  tags = {
    "Name" = "${var.project}-Worker-sg"
  }
}

resource "aws_security_group_rule" "nodes" {
  description = "Allow nodes to communicate with each other"
  security_group_id = aws_security_group.data_plane_sg.id
  type = "ingress"
  from_port = 0
  to_port = 65535
  protocol = "-1"
  cidr_blocks = flatten([
    cidrsubnet(var.vpc_cidr, var.subnet_cidr_bits, 0), 
    cidrsubnet(var.vpc_cidr, var.subnet_cidr_bits, 1), 
    cidrsubnet(var.vpc_cidr, var.subnet_cidr_bits, 2), 
    cidrsubnet(var.vpc_cidr, var.subnet_cidr_bits, 3)
  ])
}

resource "aws_security_group_rule" "nodes_inbound" {
  description = "Allow worker Kubelets and pods to receive communication from the cluster control plane"
  security_group_id = aws_security_group.data_plane_sg.id
  type = "ingress"
  from_port = 1028
  to_port = 65535
  protocol = "tcp"
  cidr_blocks = flatten([
    cidrsubnet(var.vpc_cidr, var.subnet_cidr_bits, 2),
    cidrsubnet(var.vpc_cidr, var.subnet_cidr_bits, 3),
  ])
}

resource "aws_security_group_rule" "node_outbound" {
  security_group_id = aws_security_group.data_plane_sg.id
  type = "egress"
  from_port = 0
  to_port = 0
  protocol = "-1"
  cidr_blocks = ["0.0.0.0/0"]
}

resource "aws_security_group" "control_plane_sg" {
  name = "${var.project}-ControlPlane-sg"
  vpc_id = aws_vpc.myvpc.id

  tags = {
    "Name" = "${var.project}-ControlPlane-sg"
  }
}

resource "aws_security_group_rule" "control_plane_inbound" {
  security_group_id = aws_security_group.control_plane_sg.id
  type = "ingress"
  from_port = 0
  to_port = 65535
  protocol = "tcp"
  cidr_blocks = flatten([
    cidrsubnet(var.vpc_cidr, var.subnet_cidr_bits, 0),
    cidrsubnet(var.vpc_cidr, var.subnet_cidr_bits, 1),
    cidrsubnet(var.vpc_cidr, var.subnet_cidr_bits, 2),
    cidrsubnet(var.vpc_cidr, var.subnet_cidr_bits, 3)
    
  ])
}

resource "aws_security_group_rule" "control" {
  security_group_id = aws_security_group.control_plane_sg.id
  type = "egress"
  from_port = 0
  to_port = 65535
  protocol = "-1"
  cidr_blocks = ["0.0.0.0/0"]
}
